--- a/poe-heistress/package.json
+++ b/poe-heistress/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poe-heistress",
   "productName": "poe-heistress",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Path of Exile Heist Tool",
   "main": ".webpack/main",
   "scripts": {
@@ -24,6 +24,7 @@
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
+    "@electron-forge/publisher-github": "^6.0.4",
     "@electron-forge/shared-types": "^6.0.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "fs": "^0.0.1-security",
     "node-fetch": "^3.3.0",
     "node-loader": "^2.0.0",
     "path": "^0.12.7",
@@ -49,7 +51,6 @@
     "util": "^0.12.5",
     "vue-loader": "^17.0.1",
     "vue-tsc": "^1.0.24",
-    "fs": "^0.0.1-security",
     "webpack": "^5.75.0"
   },
   "dependencies": {
