--- a/poe-heistress/package.json
+++ b/poe-heistress/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poe-heistress",
   "productName": "poe-heistress",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "Path of Exile Heist Tool",
   "main": ".webpack/main",
   "scripts": {
@@ -56,6 +56,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "mathjs": "^11.5.1",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2"
   }
