Support for remote.

--- a/poe-heistress/package.json
+++ b/poe-heistress/package.json
@@ -58,6 +58,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "mathjs": "^11.5.1",
     "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "ws": "^8.13.0"
   }
 }
